          (Closes: #539953)
        - While building action dependencies graph, ensure that if the action
          dependency has even one "not eat" property it won't be lost even in
          complicated merge scenarios.
        - While splitting heterogeneous actions, don't require additional dpkg
          flags not for 'configure' action, but for last one, which may differ.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Wed, 05 Aug 2009 11:41:06 +0300

cupt (0.5.1) unstable; urgency=medium

  * cupt:
    - Exit immediately when nothing to do (for management actions).
      Thanks to Didier 'OdyX' Raboud.
    - Shell wildcars '*' and '?' are now supported in binary/source package
      expressions. (Closes: #539732)
  * Cupt:
    - Config:
      - 'set_regular_var': fixed recognizing the value 'false' as false.
        Thanks to Michael Stapelberg. (Closes: #539730)
    - Cache:
      - Package:
        - Fixed a crash when merging two source versions with equal version
          strings. Thanks to Michael Stapelberg.
      - 'policy_version': don't assume that package contains valid versions,
        pre-check it. Thanks to Didier 'OdyX' Raboud.
      - 'get_original_apt_pin': consider only first successful pin match, as
        declared in apt_preferences(5). Thanks to Didier 'OdyX' Raboud.
      - New method 'get_source_packages'.
    - System:
      - Worker:
        - While building dependency graph, also count Conflicts/Breaks that
          belong to packages going to be removed/purged. The urgency is set to
          'medium' because of this fix. Thanks to Michael Stapelberg.
          (Closes: #539729)
    - Download:
      - Methods/File:
        - Support 'copy' scheme, and do full copying only for it. For 'file'
          scheme do only symlinking. Thanks to Michael Stapelberg.
          (Closes: #539733)
    - Core:
      - New free subroutine 'glob_to_regex'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 04 Aug 2009 20:58:34 +0300
